make catalog coverage configurable and show missing data
